<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pngtree"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"
        android:autofillHints="age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:inputType="text"
        android:autofillHints="gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:autofillHints="height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:autofillHints="weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/predict"
        android:textColorLink="#565D88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        android:layout_marginTop="24dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prediction_result_placeholder"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
